--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f5f5f5;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.heading-main {
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 80px;
+  line-height: 100px;
+
+  letter-spacing: -1.5px;
+
+  color: #8e7ffa;
+}
+.sub-heading {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 70px;
+  /* or 175% */
+
+  letter-spacing: -1.5px;
+
+  color: #74737b;
+}
+.heading-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 32px;
+  /* or 128% */
+
+  display: flex;
+  align-items: center;
+  text-align: justify;
+
+  color: #989898;
+}
+.img-search {
+  background: #eceaea;
+  border-radius: 22px;
+  width: 611px;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 32px;
+  /* identical to box height, or 145% */
+
+  color: rgba(12, 17, 31, 0.5);
+  border: none;
+  padding: 5px 20px;
+}
+.container-two {
+  background: #10093a;
+  padding: 40px;
+}
+.list-none {
+  list-style: none;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  /* identical to box height, or 16px */
+
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+  padding: 10px 40px;
+}
+.heading-main-content-two {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 50px;
+  /* identical to box height, or 139% */
+
+  text-align: center;
+  letter-spacing: -0.5px;
+
+  color: #ffffff;
+}
+.sub-heading-main-content-two {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 50px;
+  /* identical to box height, or 312% */
+
+  text-align: center;
+  letter-spacing: -0.5px;
+
+  color: #ffffff;
+
+  opacity: 0.6;
+}
+.email-class {
+  width: 387.12px;
+  height: 60px;
+
+  opacity: 0.08;
+  border-radius: 5px;
+
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 50px;
+  /* identical to box height, or 312% */
+
+  color: #ffffff;
+
+  opacity: 0.8;
+}
+.only-btn {
+  width: 163px;
+  height: 60px;
+
+  background: #5243c2;
+  border-radius: 4px;
+  color: #fff;
+}
+.zigzag {
+  left: -257px;
+  bottom: -23px;
+}
+.circles {
+  right: -306px;
+}
+.bottom-navbar-div {
+  margin-top: 30px;
 }
