--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 .heading-main {
   font-family: "Montserrat";
   font-weight: 700;
-  font-size: 80px;
+  font-size: 60px;
   line-height: 100px;
 
   letter-spacing: -1.5px;
@@ -26,7 +26,7 @@ code {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 35px;
   line-height: 70px;
   /* or 175% */
 
@@ -38,7 +38,7 @@ code {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 32px;
   /* or 128% */
 
@@ -54,15 +54,14 @@ code {
   width: 611px;
 
   font-family: "Roboto";
-  font-style: normal;
   font-weight: 400;
-  font-size: 22px;
-  line-height: 32px;
+  font-size: 18px;
   /* identical to box height, or 145% */
 
   color: rgba(12, 17, 31, 0.5);
   border: none;
   padding: 5px 20px;
+  height: 65px;
 }
 .container-two {
   background: #10093a;
@@ -94,13 +93,13 @@ code {
   letter-spacing: -0.5px;
 
   color: #ffffff;
+  margin: 20px 0px;
 }
 .sub-heading-main-content-two {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 50px;
   /* identical to box height, or 312% */
 
   text-align: center;
@@ -109,6 +108,7 @@ code {
   color: #ffffff;
 
   opacity: 0.6;
+  margin: 20px 0px;
 }
 .email-class {
   width: 387.12px;
@@ -127,6 +127,15 @@ code {
 
   opacity: 0.8;
 }
+.bg-img-div {
+  margin: 50px;
+  width: 400px;
+  height: 400px;
+}
+.girl-img {
+  width: 100%;
+  height: 100%;
+}
 .only-btn {
   width: 163px;
   height: 60px;
@@ -143,14 +152,12 @@ code {
   right: -306px;
 }
 .bottom-navbar-div {
-  margin-top: 50px;
+  margin-top: 80px;
 }
 .response-div {
   margin-top: 50px;
   width: 1260px;
-  height: 516px;
-  left: 103px;
-  top: 785px;
+  height: 316px;
 
   background: #f1f1f1;
   border-radius: 28px;
@@ -160,7 +167,7 @@ code {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 30px;
+  font-size: 22px;
   line-height: 45px;
   /* or 150% */
 
@@ -168,4 +175,20 @@ code {
 }
 .main-logo {
   margin-left: 40px;
+}
+.search-icon {
+  width: 70px;
+  margin: 10px;
+}
+.microphone-icon {
+  width: 70px;
+  margin: 10px;
+}
+.div-main-logo {
+}
+.main-logo {
+  position: relative;
+
+  bottom: -25px;
+  right: -138px;
 }
