--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,8 @@ code {
   opacity: 0.8;
 }
 .bg-img-div {
+  position: relative;
+  top: -75px;
   margin: 50px;
   width: 400px;
   height: 400px;
@@ -162,6 +164,7 @@ code {
   background: #f1f1f1;
   border-radius: 28px;
   padding: 20px;
+  margin-top: 20px;
 }
 .response-div-p {
   font-family: "Roboto";
@@ -191,4 +194,9 @@ code {
 
   bottom: -25px;
   right: -138px;
+}
+.btn-search-icon {
+  border: none;
+  outline: none;
+  background: #fff;
 }
